[package]
name = "gitui"
version = "0.22.1"
authors = ["extrawurst <mail@rusticorn.com>"]
description = "blazing fast terminal-ui for git"
edition = "2021"
rust-version = "1.65"
exclude = [".github/*", ".vscode/*", "assets/*"]
homepage = "https://github.com/extrawurst/gitui"
repository = "https://github.com/extrawurst/gitui"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = [
    "git",
    "gui",
    "cli",
    "terminal",
    "ui",
]

[dependencies]
anyhow = "1.0"
asyncgit = { path = "./asyncgit", version = "0.22", default-features = false }
backtrace = "0.3"
bitflags = "2.3"
bugreport = "0.5"
bytesize = { version = "1.2", default-features = false }
chrono = { version = "0.4", default-features = false, features = [ "clock" ] }
clap = { version = "4.1", features = [ "env", "cargo" ] }
crossbeam-channel = "0.5"
crossterm = { version = "0.26.1", features = [ "serde" ] }
dirs-next = "2.0"
easy-cast = "0.5"
filetreelist = { path = "./filetreelist", version = "0.5" }
fuzzy-matcher = "0.3"
gh-emoji = { version = "1.0", optional = true }
itertools = "0.10"
log = "0.4"
notify = "5.1"
notify-debouncer-mini = "0.2" 
once_cell = "1"
ratatui = { version = "0.20", default-features = false, features = ['crossterm', 'serde'] }
rayon-core = "1.11"
ron = "0.8"
scopeguard = "1.1"
scopetime = { path = "./scopetime", version = "0.1" }
serde = "1.0"
simplelog = { version = "0.12", default-features = false }
struct-patch = "0.2"
syntect = { version = "5.0", default-features = false, features = ["parsing", "default-syntaxes", "default-themes", "html"] }
textwrap = "0.16"
unicode-segmentation = "1.10"
unicode-truncate = "0.2"
unicode-width = "0.1"
which = "4.4"

# pprof is not available on windows
[target.'cfg(not(windows))'.dependencies]
pprof = { version = "0.11", features = ["flamegraph"], optional = true }

[dev-dependencies]
pretty_assertions = "1.3"
tempfile = "3.4"

[badges]
maintenance = { status = "actively-developed" }

[features]
default =["ghemoji", "regex-fancy", "trace-libgit", "vendor-openssl"]
ghemoji =["gh-emoji"]
# regex-* features are mutually exclusive.
regex-fancy = ["syntect/regex-fancy"]
regex-onig = ["syntect/regex-onig"]
timing =["scopetime/enabled"]
trace-libgit =["asyncgit/trace-libgit"]
vendor-openssl = ["asyncgit/vendor-openssl"]

[workspace]
members =[
    "asyncgit",
    "filetreelist",
    "scopetime",
]

[profile.release]
lto = true
opt-level = 'z'  # Optimize for size.
codegen-units = 1

# make debug build as fast as release 
# usage of utf8 encoding inside tui 
# makes their debug profile slow
[profile.dev.package."ratatui"]
opt-level = 3
