[package]
name = "async_utils"
version = "0.1.0"
authors = ["Stephan Dilly <dilly.stephan@gmail.com>"]
edition = "2018"
description = "async job utils"
homepage = "https://github.com/extrawurst/gitui"
repository = "https://github.com/extrawurst/gitui"
readme = "README.md"
license-file = "LICENSE.md"
categories = ["asynchronous","concurrency"]
keywords = ["parallel", "thread", "concurrency", "performance"]

[dependencies]
rayon-core = "1.9"
crossbeam-channel = "0.5"
log = "0.4"
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "0.7"