[package]
name = "filetreelist"
version = "0.4.0"
authors = ["Stephan Dilly <dilly.stephan@gmail.com>"]
edition = "2018"
description = "filetree abstraction based on a sorted path list, supports key based navigation events, folding, scrolling and more"
homepage = "https://github.com/extrawurst/gitui"
repository = "https://github.com/extrawurst/gitui"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["gui", "cli", "terminal", "ui", "tui"]

[dependencies]
scopetime = { path = "../scopetime", version = "0.1" }
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.0"
