[package]
name = "filetreelist"
version = "0.5.1"
authors = ["extrawurst <mail@rusticorn.com>"]
edition = "2021"
description = "filetree abstraction based on a sorted path list, supports key based navigation events, folding, scrolling and more"
homepage = "https://github.com/extrawurst/gitui"
repository = "https://github.com/extrawurst/gitui"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["gui", "cli", "terminal", "ui", "tui"]

[dependencies]
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
