[package]
name = "git2-hooks"
version = "0.3.2"
authors = ["extrawurst <mail@rusticorn.com>"]
edition = "2021"
description = "adds git hooks support based on git2-rs"
homepage = "https://github.com/extrawurst/gitui"
repository = "https://github.com/extrawurst/gitui"
documentation = "https://docs.rs/git2-hooks/"
readme = "README.md"
license = "MIT"
categories = ["development-tools"]
keywords = ["git"]

[dependencies]
git2 = ">=0.17"
log = "0.4"
shellexpand = "3.1"
thiserror = "1.0"

[dev-dependencies]
git2-testing = { path = "../git2-testing" }
pretty_assertions = "1.4"
tempfile = "3"
