[package]
name = "git2-testing"
version = "0.1.0"
authors = ["extrawurst <mail@rusticorn.com>"]
edition = "2021"
description = "convenience functions to write unittests on top of git2-rs"
homepage = "https://github.com/extrawurst/gitui"
repository = "https://github.com/extrawurst/gitui"
readme = "README.md"
license = "MIT"
categories = ["development-tools"]
keywords = ["git"]

[dependencies]
env_logger = "0.11"
git2 = ">=0.17"
log = "0.4"
tempfile = "3"
