[package]
name = "invalidstring"
version = "0.1.1"
authors = ["Stephan Dilly <dilly.stephan@gmail.com>"]
edition = "2018"
description = "just for testing invalid string data"
homepage = "https://github.com/extrawurst/gitui"
repository = "https://github.com/extrawurst/gitui"
readme = "README.md"
license = "MIT"
categories = ["development-tools","development-tools::testing","encoding"]
keywords = ["string"]

[dependencies]
