[package]
name = "invalidstring"
version = "0.1.3"
authors = ["extrawurst <mail@rusticorn.com>"]
edition = "2021"
description = "just for testing invalid string data"
homepage = "https://github.com/extrawurst/gitui"
repository = "https://github.com/extrawurst/gitui"
readme = "README.md"
license = "MIT"
categories = ["development-tools", "development-tools::testing", "encoding"]
keywords = ["string"]
