[package]
name = "scopetime"
version = "0.1.1"
authors = ["Stephan Dilly <dilly.stephan@gmail.com>"]
edition = "2018"
description = "log runtime of arbitrary scope"
homepage = "https://gitui.org"
license = "MIT"
readme = "README.md"
categories = ["development-tools::profiling"]

[dependencies]
log = "0.4"

[features]
default=[]
enabled=[]